kromgo-all.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/controller: kromgo
    app.kubernetes.io/instance: kromgo
    app.kubernetes.io/name: kromgo
  name: kromgo
  namespace: observability
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: health
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/controller: kromgo
    app.kubernetes.io/instance: kromgo
    app.kubernetes.io/name: kromgo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: kromgo
    app.kubernetes.io/instance: kromgo
    app.kubernetes.io/name: kromgo
  name: kromgo
  namespace: observability
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/controller: kromgo
      app.kubernetes.io/instance: kromgo
      app.kubernetes.io/name: kromgo
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: kromgo
        app.kubernetes.io/instance: kromgo
        app.kubernetes.io/name: kromgo
    spec:
      containers:
      - env:
        - name: PROMETHEUS_URL
          value: http://prometheus-operated.observability.svc.cluster.local:9090
        - name: SERVER_PORT
          value: "80"
        - name: HEALTH_PORT
          value: "8080"
        image: ghcr.io/kashalls/kromgo:v0.10.0@sha256:965ecc92d68dc1a4a969397855367bbc70da03227a941ea607b73bb7e0b78fd6
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
        name: app
        ports:
        - containerPort: 80
          name: http
        - containerPort: 8080
          name: health
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /kromgo/config.yaml
          name: config-file
          readOnly: true
          subPath: config.yaml
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
      - configMap:
          name: kromgo-configmap
        name: config-file
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/controller: kromgo
    app.kubernetes.io/instance: kromgo
    app.kubernetes.io/name: kromgo
  name: kromgo
  namespace: observability
spec:
  hostnames:
  - kromgo.unscfleet.com
  parentRefs:
  - name: envoy-external
    namespace: network
    sectionName: https
  rules:
  - backendRefs:
    - name: kromgo
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
